--- a/links/css/style.css
+++ b/links/css/style.css
@@ -116,7 +116,7 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px 0px;;
+    padding: 30px 0px;
     clear: both;
     height: fit-content;
     background-color: lightgrey;
@@ -162,6 +162,7 @@ a {
     display: flex;
 }
 .project-cell {
+    border-radius: 5px;
     background-color: white;
     width: 33.33%;
     height: 300px;
@@ -171,7 +172,7 @@ a {
 .project-cell img {
     border-bottom: 2px solid black;
     width: 100%;
-    height: 80%;
+    height: 85%;
 }
 .divider {
     width: 80%;
@@ -180,10 +181,6 @@ a {
 @media only screen and (max-width: 800px) {
     h1 {
         font-size: 1.5em;
-    }
-    #main-container {
-        padding-left: 0;
-        padding-right: 0;
     }
     #site-header {
         width: 100%;
@@ -243,5 +240,6 @@ a {
         border: 1px solid black;
     }
     .project-cell img {
+        height: 80%;
     }
 }
